
option java_outer_classname="GetEnumeratorCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetEnumeratorCommand {
	optional int64 requestId = 1;
}